# python-project-lvl1

./: .gitignore  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  games_logic.py
brain_games/games/: calc.py  even_game.py  gcd_game.py  prime_game.py  progression.py  progression_game.py
brain_games/logic/: games_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  logic.py
