[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = ""
authors = ["iliya sinitsyn <baner1337228@gmail.com>"]
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
poetry = 'poetry.console:run'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
